# ros2_tray_handler

./: .gitignore  README.md  apt_packages.txt  gazebo_bridge.sh  requirements.txt  test.sdf
src/: Learning.sdf  launches.py  test.sdf
src/camera/camera_d435_rotator/: CMakeLists.txt  package.xml
src/camera/camera_d435_rotator/camera_d435_rotator/: __init__.py
src/camera/camera_d435_rotator/launch/: d435_rotated.launch.py
src/camera/camera_d435_rotator/scripts/: realsense_rotator_node.py
src/jaka_description/: CMakeLists.txt  package.xml
src/jaka_description/meshes/jaka_s12_meshes/: Gripper01.STL  Gripper01.dae  Gripper02.STL  Gripper02.dae
src/jaka_description/urdf/: jaka_s12.urdf
src/jaka_driver/: CMakeLists.txt  package.xml
src/jaka_driver/launch/: robot_start.launch.py
src/jaka_driver/src/: client.cpp  jaka_driver.cpp  sdk_test.cpp  servoj_demo.cpp
src/jaka_movement/: CMakeLists.txt  package.xml
src/jaka_movement/launch/: tray_handler.launch.py
src/jaka_movement/src/: tray_handler.cpp
src/jaka_msgs/: CMakeLists.txt  package.xml
src/jaka_planner/: CMakeLists.txt  package.xml
src/jaka_planner/include/jaka_planner/: JAKAZuRobot.h  jkerr.h  jktypes.h
src/jaka_planner/launch/: moveit_server.launch.py
src/jaka_planner/src/: moveit_server.cpp  moveit_test.cpp
src/jaka_s12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_s12_moveit_config/config/: initial_positions.yaml  jaka_s12.ros2_control.xacro  jaka_s12.srdf  jaka_s12.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
src/jaka_s12_moveit_config/config/planning_pipelines/: ompl.yaml  pilz.yaml
src/jaka_s12_moveit_config/launch/: demo.launch.py  demo_gazebo.launch.py  gazebo.launch.py  move_group.launch.py  move_group_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/jaka_s12_moveit_config/src/: sim_effort_estimator.cpp
src/meshes/: Carrello.dae  Vassoio-Carrello.dae  Vassoio-Vassoio.dae  Vassoio.dae
src/testJaka/: open3d_conversions.py  req.txt  test.py  test_camera.py  test_dcamera.py  testopen3d.py
src/training/: comandi.txt  convert_to_YOLO.py  dataset_split.py  demo.py  extractor.py  fix_category.py  flip_dataset.py  image_saver.py  movement_learning.py  yolo_data_collector.py  yolo_training.py
src/training/RW_COCO_dataset2/: result_coco_fixed.json
src/yolo_inference/: CMakeLists.txt  package.xml
src/yolo_inference/scripts/: yolo_inference_node.py
