<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_d435_rotator</name>
  <version>0.0.1</version>
  <description>Launches an Intel RealSense D435 and republishes a 180-degree rotated RGB image and point cloud.</description>
  <maintainer email="you@todo.todo">nicola</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
